🍟🚂 Checkpoint ./index.html:9318777/1066 ./research-project.html:9318777/173 ./header.html:9318777/232 ./footer.html:9318777/1407 ./research-project.html copy:9318777/6452

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>My Portfolio</title>
+		<title>My INF303D Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -95,10 +95,12 @@
                       <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
                       <div class="inner">
                         <h4>INF303D Projects</h4>
-                        <p>In INF303D, I contributed to two group projects and developed a presentation about how the Internet has affected my field.
+                        <p>In INF303D, I contributed to two group projects and developed a presentation about how the Internet has affected my field.</p>
                         <ul>
-                          
-                        </ul></li><a href="inf303d.html"> Click here to learn more.</a></p>
+                          <li><a href="research-project.html"> Read about my research project</a></li>
+                          <li><a href="group-project.html"> Read about my group project</a></li>
+                          <li><a href="reflection.html"> Watch my reflection video</a></li>
+                        </ul>
                       </div>
                     </article>
 
