--- a/research-project.html
+++ b/research-project.html
@@ -6,12 +6,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
   <head>
-    <title>My Portfolio</title>
+    <title>My INF303D Website</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
 
@@ -25,9 +26,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <nav id="nav">
         <ul>
           <li><a href="index.html">return home</a></li>
-          <li><a href="#three" class="active">group project 1</a></li>
-          <li><a href="#four">group project 2</a></li>
-          <li><a href="#five">individual project</a></li>
+          <li><a href="#three" class="active">project 1</a></li>
+          <li><a href="#four">project 2</a></li>
+          <li><a href="#five">project 3</a></li>
           <li><a href="#six">resources</a></li>
 
         </ul>
@@ -56,7 +57,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
               <h2>INF303D</h2>
               <p>Academic Success in the Digital University
                 <br/>
-              Jan - May 2019</p>
+              Jan - May 2020</p>
             </header>
             <p>As part of the class INF303D, Academic Success in the Digital University, I developed a portfolio website to showcase my projects, both from this class and others and my extracurriciular experiences.</p>
             <p>I learned how to edit HTML and CSS, and used Mozilla Thimble to customize an HTML template and make it my own. I then learned how to host my new HTML website with Github Pages, and how to maintain it going forward.</p>
@@ -67,7 +68,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <!-- Three -->
         <section id="three">
           <div class="container">
-            <h3>Group Project 1</h3>
+            <h3> Project 1</h3>
             <p>Here's some text to introduce my project.</p>
             <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>          </div>
         </section>
