🐚🧀 Checkpoint ./research-project.html:9318777/160 ./index.html:9318777/438 ./inf303d-projects.html:9318777/78

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                       <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
                       <div class="inner">
                         <h4>INF303D Projects</h4>
-                        <p>In INF303D, I contributed to two group projects and developed a presentation about how the Internet has affected my field.</p>
+                        <p>In INF303D, I created an individual research project.</p>
                         <ul>
-                          <li><a href="research-project.html"> Read about my research project</a></li>
-                          <li><a href="group-project.html"> Read about my group project</a></li>
-                          <li><a href="reflection.html"> Watch my reflection video</a></li>
+                          <li><a href="inf303d-projects.html#one"> Read about my research project</a></li>
+                          <li><a href="inf303d-projects.html#two"> Read about my group project</a></li>
+                          <li><a href="inf303d-projects.html#three"> Watch my reflection video</a></li>
                         </ul>
                       </div>
                     </article>
