--- a/inf303d-projects.html
+++ b/inf303d-projects.html
@@ -26,10 +26,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <nav id="nav">
         <ul>
           <li><a href="index.html">return home</a></li>
-          <li><a href="#three" class="active">project 1</a></li>
-          <li><a href="#four">project 2</a></li>
-          <li><a href="#five">project 3</a></li>
-          <li><a href="#six">resources</a></li>
+          <li><a href="#one" class="active">project 1</a></li>
+          <li><a href="#two">project 2</a></li>
+          <li><a href="#three">project 3</a></li>
+          <li><a href="#four">resources</a></li>
 
         </ul>
       </nav>
@@ -51,7 +51,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <div id="main">
 
         <!-- Two -->
-        <section id="two">
+        <section id="top">
           <div class="container">
             <header class="major">
               <h2>INF303D</h2>
@@ -66,16 +66,16 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         </section>
 
         <!-- Three -->
-        <section id="three">
+        <section id="one">
           <div class="container">
-            <h3> Project 1</h3>
+            <h3>Research Project</h3>
             <p>Here's some text to introduce my project.</p>
             <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>          </div>
         </section>
         <!-- Four -->
-        <section id="three">
+        <section id="two">
           <div class="container">
-            <h3>Group Project 2</h3>
+            <h3>Group Project</h3>
             <p>Here's some text to introduce my project.</p>
             <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>
           </div>
@@ -83,13 +83,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <!-- Five -->
         <section id="three">
           <div class="container">
-            <h3>Individual Project</h3>
+            <h3>Reflection Project</h3>
             <p>Here's some text to introduce my project.</p>
             <iframe style="width:100%" src="https://docs.google.com/presentation/d/e/2PACX-1vTfHhzCNTrbQl-YUoFM4MsVtdzLstYthZgvgoX3d7eaRucuYAU2BLoqZBA8ZfsN1UcWp3dDPIVFRmBc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
           </div>
         </section>
         <!-- Six -->
-        <section id="six">
+        <section id="four">
           <div class="container">
             <h3>Resources</h3>
             <ul>
