👨‍👨‍👦🚘 Checkpoint ./index.html:9318777/100 ./inf303d-projects.html:9318777/71

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                       <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
                       <div class="inner">
                         <h4>INF303D Projects</h4>
-                        <p>In INF303D, I created an individual research project.</p>
+                        <p>In INF303D, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class. Read more about them below.</p>
                         <ul>
                           <li><a href="inf303d-projects.html#one"> Read about my research project</a></li>
                           <li><a href="inf303d-projects.html#two"> Read about my group project</a></li>
@@ -114,7 +114,8 @@
 								<div class="container">
 									<h3>Contact</h3>
 									<p>You can contact me by filling out the form below, or by connecting with me on social media.</p>
-<!--Change the contact info below to your own!-->
+
+                  <!--Change the contact info below to your own!-->
                   <form method="post" action="mailto:myname@gmail.com">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
