👣🐾 Checkpoint ./.glitch-assets:9318777/2003 ./assets/css/main.css:9318777/464 ./index.html:9318777/107

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Favatar.jpg?v=1576124642826" alt="" /></span>
 					<h1 id="logo"><a href="#">Molly McGee</a></h1>
 					<p>I love solving problems.</p>
 				</header>
