🎅💖 Checkpoint ./.glitch-assets:9318777/960 ./index.html:9318777/471 ./inf303d-projects.html:9318777/90

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Resume</h3>
-                  <p><a href="files/resume-template.docx">(Download full length pdf here)</a></p>
+                  <p><a href="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fresume-template.docx?v=1576124894325">(Download full length pdf here)</a></p>
 									<h4>Education</h4>
                   <ul>
                     <li>The University of Texas at Austin - May 2026, Bachelor of Arts in English</li>
@@ -86,16 +86,16 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p>Here are some examples of my work. Click on the link in the description to read about the project in more detail.</p>
+									<p>Here are some examples of my work. Click on the links in the description to read about the projects in more detail.</p>
 									<div class="features">
                     
  <!--You can copy and paste the whole "article" block below if you want to add a new project and link to this section-->
                     
                     <article>
-                      <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                      <a href="#" class="image"><img src="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fman-using-laptop-on-table-against-white-background-257897.jpg?v=1576124836642" alt="" /></a>
                       <div class="inner">
                         <h4>INF303D Projects</h4>
-                        <p>In INF303D, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class. Read more about them below.</p>
+                        <p>In INF303D, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class.</p>
                         <ul>
                           <li><a href="inf303d-projects.html#one"> Read about my research project</a></li>
                           <li><a href="inf303d-projects.html#two"> Read about my group project</a></li>
