--- a/inf303d-projects.html
+++ b/inf303d-projects.html
@@ -25,9 +25,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <nav id="nav">
         <ul>
           <li><a href="index.html">return home</a></li>
-          <li><a href="#one" class="active">project 1</a></li>
-          <li><a href="#two">project 2</a></li>
-          <li><a href="#three">project 3</a></li>
+          <li><a href="#one" class="active">research project</a></li>
+          <li><a href="#two">group project</a></li>
+          <li><a href="#three">reflection project</a></li>
           <li><a href="#four">resources</a></li>
 
         </ul>
@@ -56,7 +56,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
               <h2>INF303D</h2>
               <p>Academic Success in the Digital University
                 <br/>
-              Jan - May 2020</p>
+              January - May 2020</p>
             </header>
             <p>As part of the class INF303D, Academic Success in the Digital University, I developed a portfolio website to showcase my projects, both from this class and others and my extracurriciular experiences.</p>
             <p>I learned how to edit HTML and CSS, and used Mozilla Thimble to customize an HTML template and make it my own. I then learned how to host my new HTML website with Github Pages, and how to maintain it going forward.</p>
