🛫🚡 Checkpoint ./index.html:9318777/79 ./inf303d-projects.html:9318777/9 ./i302-projects.html:9318777/22

--- a/i302-projects.html
+++ b/i302-projects.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
   <head>
-    <title>My INF303D Website</title>
+    <title>My I302 Website</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -53,12 +53,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <section id="top">
           <div class="container">
             <header class="major">
-              <h2>INF303D</h2>
+              <h2>I302</h2>
               <p>Academic Success in the Digital University
                 <br/>
               January - May 2020</p>
             </header>
-            <p>As part of the class INF303D, Academic Success in the Digital University, I developed a portfolio website to showcase my projects, both from this class and others and my extracurriciular experiences.</p>
+            <p>As part of the class I302, Academic Success in the Digital University, I developed a portfolio website to showcase my projects, both from this class and others and my extracurriciular experiences.</p>
             <p>I learned how to edit HTML and CSS, and used Mozilla Thimble to customize an HTML template and make it my own. I then learned how to host my new HTML website with Github Pages, and how to maintain it going forward.</p>
             <p>I also completed the following projects - read about them below.</p>
           </div>
