--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>My INF303D Website</title>
+		<title>My I302 Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -56,7 +56,7 @@
 									</header>
 									<p>I am an undergraduate student at the University of Texas at Austin with an interest in English language and literature. I hope to study British literature, and one day hope to work in a library. My hobbies include crocheting, book repair, and swimming with sharks.</p>
 								  <p>
-                    I created this website for course INF303D, Academic Success in the Digital University.
+                    I created this website for course I302, Academic Success in the Digital University.
                   </p>
                 </div>
 							</section>
@@ -94,12 +94,12 @@
                     <article>
                       <a href="#" class="image"><img src="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fman-using-laptop-on-table-against-white-background-257897.jpg?v=1576124836642" alt="" /></a>
                       <div class="inner">
-                        <h4>INF303D Projects</h4>
-                        <p>In INF303D, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class.</p>
+                        <h4>I302 Projects</h4>
+                        <p>In I302, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class.</p>
                         <ul>
-                          <li><a href="inf303d-projects.html#one"> Read about my research project</a></li>
-                          <li><a href="inf303d-projects.html#two"> Read about my group project</a></li>
-                          <li><a href="inf303d-projects.html#three"> Watch my reflection video</a></li>
+                          <li><a href="i302-projects.html#one"> Read about my research project</a></li>
+                          <li><a href="i302-projects.html#two"> Read about my group project</a></li>
+                          <li><a href="i302-projects.html#three"> Watch my reflection video</a></li>
                         </ul>
                       </div>
                     </article>
