🏃⏱ Checkpoint ./index.html:9318777/35

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<p>You can contact me by filling out the form below, or by connecting with me on social media.</p>
 
                   <!--Change the contact info below to your own!-->
-                  <form method="post" action="mailto:myname@gmail.com">
+                  <form method="post" action="mailto:mkmgee@utexas.edu">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
