🚛🎓 Checkpoint ./.glitch-assets:50413515/945 ./index.html:50413515/2401

--- a/index.html
+++ b/index.html
@@ -18,26 +18,18 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Favatar.jpg?v=1576124642826" alt="" /></span>
-					<h1 id="logo"><a href="#">Molly McGee</a></h1>
-					<p>I love solving problems.</p>
+					<span class="image avatar"><img src="https://cdn.glitch.global/3540f195-64df-4137-a729-8251c69e0e17/assets%3A4k%20Animals%20-%20Imgur.jpg?v=1667062024525" alt="" /></span>
+					<h1 id="logo"><a href="#">Ian Blakley</a></h1>
+					<p>I'm a student at UT Austin.</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">bio</a></li>
-						<li><a href="#two">resume</a></li>
 						<li><a href="#three">projects</a></li>
 						<li><a href="#four">contact</a></li>
 					</ul>
 				</nav>
 				<footer>
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
 				</footer>
 			</section>
 
@@ -51,10 +43,10 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Hi, I'm Molly</h2>
-										<p>I love solving problems.</p>
+										<h2>My name is Ian</h2>
+										<p>I'm a student at UT Austin.</p>
 									</header>
-									<p>I am an undergraduate student at the University of Texas at Austin with an interest in English language and literature. I hope to study British literature, and one day hope to work in a library. My hobbies include crocheting, book repair, and swimming with sharks.</p>
+									<p>I am an undergraduate student at the University of Texas at Austin majoring in informatics in the concentration of UX design. I am also minoring in computer science. In my free time I enjoy playing guitar, watching movies, and playing video games.</p>
 								  <p>
                     I created this website for course I302, Academic Success in the Digital University.
                   </p>
@@ -62,25 +54,6 @@
 							</section>
 
 						<!-- Two - YOU CAN DELETE SECTION TWO IF YOU DON'T WANT TO INCLUDE RESUME/EDUCATION/SKILLS -->
-							<section id="two">
-								<div class="container">
-									<h3>Resume</h3>
-                  <p><a href="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fresume-template.docx?v=1576124894325">(Download full length pdf here)</a></p>
-									<h4>Education</h4>
-                  <ul>
-                    <li>The University of Texas at Austin - May 2026, Bachelor of Arts in English</li>
-                  </ul>
-                  <h2>Skills</h2>
-									<ul class="feature-icons">
-										<li class="fa-code">Basic HTML and CSS</li>
-										<li class="fa-cubes">Organized and detail oriented</li>
-										<li class="fa-book">Ability to write and think critically</li>
-										<li class="fa-coffee">Focused and enthusiastic</li>
-										<li class="fa-bolt">Excellent at meeting deadlines</li>
-										<li class="fa-users">Seasoned digital collaborator</li>
-									</ul>
-								</div>
-							</section>
 
 						<!-- Three -->
 							<section id="three">
