🚄💎 Checkpoint ./index.html:50413515/344

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p>Here are some examples of my work. Click on the links in the description to read about the projects in more detail.</p>
+									<p>Here is an example of my work. Click on the links in the description to read about the project in more detail.</p>
 									<div class="features">
                     
  <!--You can copy and paste the whole "article" block below if you want to add a new project and link to this section-->
                     
                     <article>
-                      <a href="#" class="image"><img src="https://cdn.glitch.com/4f21be4b-5129-48b1-b0aa-fcd34590f40c%2Fman-using-laptop-on-table-against-white-background-257897.jpg?v=1576124836642" alt="" /></a>
+                      <a href="#" class="image"><img src="https://cdn.glitch.global/3540f195-64df-4137-a729-8251c69e0e17/Screen%20Shot%202022-10-29%20at%2011.36.50%20AM.png?v=1667062010410" alt="" /></a>
                       <div class="inner">
                         <h4>I302 Projects</h4>
                         <p>In I302, I completed an individual research project, contributed to a group project, and created a video reflecting on my experiences in the class.</p>
@@ -89,7 +89,7 @@
 									<p>You can contact me by filling out the form below, or by connecting with me on social media.</p>
 
                   <!--Change the contact info below to your own!-->
-                  <form method="post" action="mailto:yourname@gmail.com">
+                  <form method="post" action="mailto:ian.blakley@utexas.edu">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
