🐙🍬 Checkpoint ./i302-projects.html:50413515/1751

--- a/i302-projects.html
+++ b/i302-projects.html
@@ -19,8 +19,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <section id="header">
       <header>
         <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-        <h1 id="logo"><a href="#">Molly McGee</a></h1>
-        <p>I love solving problems.</p>
+        <h1 id="logo"><a href="#">Ian Blakley</a></h1>
+        <p>I'm a student at UT Austin.</p>
       </header>
       <nav id="nav">
         <ul>
@@ -33,13 +33,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         </ul>
       </nav>
       <footer>
-        <ul class="icons">
-          <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-          <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-          <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-          <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-          <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-        </ul>
       </footer>
     </section>
 
@@ -56,11 +49,11 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
               <h2>I302</h2>
               <p>Academic Success in the Digital University
                 <br/>
-              January - May 2020</p>
+              August - December 2022</p>
             </header>
-            <p>As part of the class I302, Academic Success in the Digital University, I developed a portfolio website to showcase my projects, both from this class and others and my extracurriciular experiences.</p>
-            <p>I learned how to edit HTML and CSS, and used Mozilla Thimble to customize an HTML template and make it my own. I then learned how to host my new HTML website with Github Pages, and how to maintain it going forward.</p>
-            <p>I also completed the following projects - read about them below.</p>
+            <p>As part of the class I302, Academic Success in the Digital University, I developed a portfolio website to showcase my project from this class and what I learned from it.</p>
+            <p>I learned how to conduct research through the UT Library, put that research into writing, and present my research through a video presentation and a website.</p>
+            <p></p>
           </div>
         </section>
 
@@ -68,7 +61,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <section id="one">
           <div class="container">
             <h3>Research Project</h3>
-            <p>Here's some text to introduce my project.</p>
+            <p>My project was about researching the effects of COVID-19 on wealth inequality in the US. I learned how to research on the UT Library website, construct a research proposal from my findings, present that information through a video with captions, and use html, javascript, and CSS to create a website to explain these findings.</p>
             <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>          </div>
         </section>
         <!-- Four -->
@@ -76,7 +69,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           <div class="container">
             <h3>Group Project</h3>
             <p>Here's some text to introduce my project.</p>
-            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>
+            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit"></iframe>
           </div>
         </section>
         <!-- Five -->
