--- a/i302-projects.html
+++ b/i302-projects.html
@@ -68,7 +68,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <section id="two">
           <div class="container">
             <h3>Group Project</h3>
-            <p>Here's some text to introduce my project.</p>
+            <p>For my group project, my group and I collaborated to address the issue of how technology and work have been impacted by COVID-19. This project taught me how to work better with my peers, and how to put together massive amounts of collective information and research into a digestible project.</p>
             <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit"></iframe>
           </div>
         </section>
