🌖💧 Checkpoint ./i302-projects.html:50413515/577

--- a/i302-projects.html
+++ b/i302-projects.html
@@ -76,8 +76,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <section id="three">
           <div class="container">
             <h3>Reflection Project</h3>
-            <p>Here's some text to introduce my project.</p>
-            <iframe style="width:100%" src="https://docs.google.com/presentation/d/e/2PACX-1vTfHhzCNTrbQl-YUoFM4MsVtdzLstYthZgvgoX3d7eaRucuYAU2BLoqZBA8ZfsN1UcWp3dDPIVFRmBc/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <p>My reflection project was such and such. Placeholder.</p>
+            <iframe style="width:100%" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
           
           </div>
         </section>
