🍀👣 Checkpoint ./.glitch-assets:50413515/385 ./index.html:50413515/207

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="https://cdn.glitch.global/3540f195-64df-4137-a729-8251c69e0e17/assets%3A4k%20Animals%20-%20Imgur.jpg?v=1667062024525" alt="" /></span>
+					<span class="image avatar"><img src="https://cdn.glitch.global/3540f195-64df-4137-a729-8251c69e0e17/IMG_0168.JPG?v=1667177605420" alt="" /></span>
 					<h1 id="logo"><a href="#">Ian Blakley</a></h1>
 					<p>I'm a student at UT Austin.</p>
 				</header>
