🎀👰 Checkpoint ./i302-projects.html:50413515/651 ./index.html:50413515/19

--- a/i302-projects.html
+++ b/i302-projects.html
@@ -76,8 +76,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <section id="three">
           <div class="container">
             <h3>Reflection Project</h3>
-            <p>My reflection project was such and such. Placeholder.</p>
-            <iframe style="width:100%" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <p>My reflection project was created at the very end of the semester to reflect on the coursework from this class and what I learned from it. This assignment allowed me to consider the skills I have gained from taking I302, and what I will be able to use them for in the future, such as basic HTML coding, knowledge of how to email professors, and how to gather academic resources.</p>
+            <iframe style="width:100%" src="https://docs.google.com/document/d/1v8xrwuQEKeAR1I9VXWtiGTc60_AOzNEIMHpE53mVY5E/edit?usp=sharing" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
           
           </div>
         </section>
