--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <ul>
                           <li><a href="i302-projects.html#one"> Read about my research project</a></li>
                           <li><a href="i302-projects.html#two"> Read about my group project</a></li>
-                          <li><a href="i302-projects.html#three"> Watch my reflection video</a></li>
+                          <li><a href="i302-projects.html#three"> Read my reflection paper</a></li>
                         </ul>
                       </div>
                     </article>
