🐦🏝 Checkpoint ./i302-projects.html:50413515/417

--- a/i302-projects.html
+++ b/i302-projects.html
@@ -62,14 +62,14 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           <div class="container">
             <h3>Research Project</h3>
             <p>My project was about researching the effects of COVID-19 on wealth inequality in the US. I learned how to research on the UT Library website, construct a research proposal from my findings, present that information through a video with captions, and use html, javascript, and CSS to create a website to explain these findings.</p>
-            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/e/2PACX-1vT5h_6dzlwADCZeJIYTMNhPeC8mmnD2TK1ozQ_0i5Ei3VdvqUXeU9OCks0zaD_LmOBPEr9oLjFBfbAs/pub?embedded=true"></iframe>          </div>
+            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit?usp=sharing"></iframe>          </div>
         </section>
         <!-- Four -->
         <section id="two">
           <div class="container">
             <h3>Group Project</h3>
             <p>For my group project, my group and I collaborated to address the issue of how technology and work have been impacted by COVID-19. This project taught me how to work better with my peers, and how to put together massive amounts of collective information and research into a digestible project.</p>
-            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/12KWVFqsPFT1d8slHsrNFguqnHlR4upBIg8OI5WVTGTU/edit"></iframe>
+            <iframe style="width:100%; height:500px;" src="https://docs.google.com/document/d/1ZEuMFoH45tSjl_irNieqG98IdFNSGMZwpaFnDBFrqgo/edit?usp=sharing"></iframe>
           </div>
         </section>
         <!-- Five -->
